<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login__gymh_log_in"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login__hint" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login__username"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login__password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login__login_button" />

    <TextView
        android:id="@+id/textViewWrongLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="monospace"
        android:text="@string/login___login_invalid"
        android:textAlignment="center"
        android:textColor="#ff0000"
        android:textSize="30sp"
        android:visibility="gone" />

</LinearLayout>