<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notizen__title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notizen__info_autosave"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText_notiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/notizen__input_placeholder"
        android:inputType="textMultiLine"
        tools:ignore="Autofill" />
</LinearLayout>